--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "egg-scripts start --daemon --title=egg-server-eggUpiao",
     "stop": "egg-scripts stop --title=egg-server-eggUpiao",
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --workers 2",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
