--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-cors": "^2.1.0",
+    "egg-mongo": "^2.0.0",
+    "egg-mongo-native": "^3.2.0",
+    "egg-redis": "^2.0.0",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^3.1.4",
+    "egg-session-redis": "^2.0.0",
     "moment": "^2.22.2",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3"
