--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
     "description": "upiao server",
     "private": true,
     "dependencies": {
+        "@antv/data-set": "^0.8.0",
+        "@babel/polyfill": "^7.0.0-beta.36",
+        "antd": "^3.8.0",
+        "bizcharts": "^3.2.3-beta.2",
+        "bizcharts-plugin-slider": "^2.0.7",
+        "classnames": "^2.2.5",
+        "dva": "^2.2.3",
+        "dva-loading": "^2.0.3",
+        "echarts": "^4.1.0",
         "egg": "^2.2.1",
         "egg-cors": "^2.1.0",
         "egg-mongo": "^2.0.0",
@@ -13,18 +22,12 @@
         "egg-sequelize": "^3.1.4",
         "egg-session-redis": "^2.0.0",
         "egg-view-assets": "^1.3.0",
-        "moment": "^2.19.3",
-        "mysql": "^2.15.0",
-        "mysql2": "^1.5.3",
-        "@antv/data-set": "^0.8.0",
-        "@babel/polyfill": "^7.0.0-beta.36",
-        "antd": "^3.8.0",
-        "classnames": "^2.2.5",
-        "dva": "^2.2.3",
-        "dva-loading": "^2.0.3",
         "enquire-js": "^0.2.1",
         "lodash": "^4.17.10",
         "lodash-decorators": "^6.0.0",
+        "moment": "^2.19.3",
+        "mysql": "^2.15.0",
+        "mysql2": "^1.5.3",
         "numeral": "^2.0.6",
         "omit.js": "^1.0.0",
         "path-to-regexp": "^2.1.0",
